# artiq

./: .gitignore  aqt.json  flake.nix
.github/workflows/: firmware_ci.yml  software_ci.yml
artiq/coredevice/: dac34h84.py
artiq/firmware/: Cargo.toml
artiq/firmware/ad9910-pac/: Cargo.toml
artiq/firmware/ad9910-pac/src/: generic.rs  lib.rs  regs.rs
artiq/firmware/ad9910-pac/src/regs/: asf.rs  aux_dac_control.rs  cfr1.rs  cfr2.rs  cfr3.rs  digital_ramp_limit.rs  digital_ramp_rate.rs  digital_ramp_step_size.rs  ftw.rs  io_update_rate.rs  multichip_sync.rs  pow.rs  ram.rs  ram_profile0.rs  ram_profile1.rs  ram_profile2.rs  ram_profile3.rs  ram_profile4.rs  ram_profile5.rs  ram_profile6.rs  ram_profile7.rs  single_tone_profile0.rs  single_tone_profile1.rs  single_tone_profile2.rs  single_tone_profile3.rs  single_tone_profile4.rs  single_tone_profile5.rs  single_tone_profile6.rs  single_tone_profile7.rs
artiq/firmware/ddb_parser/: Cargo.toml
artiq/firmware/ddb_parser/src/: core.rs  devices.rs  eeprom.rs  i2c.rs  lib.rs  phaser.rs  spi2.rs  ttl.rs  urukul.rs
artiq/firmware/ksupport/: Cargo.toml  api.rs  build.rs  eh_artiq.rs  glue.c  ksupport.ld  lib.rs  log.rs  logger.rs  nrt_bus.rs  rpc.rs  rtio.rs  spi2.rs
artiq/firmware/ksupport/sinara/: edge_counter.rs  mod.rs  ttl.rs
artiq/firmware/ksupport/sinara/phaser/: mod.rs
artiq/firmware/ksupport/sinara/urukul/: ad9910.rs  config.rs  cpld.rs  mod.rs  status.rs
artiq/firmware/libbuild_ksupport/: Cargo.toml
artiq/firmware/libbuild_ksupport/src/: ddb.rs  edge_counter.rs  led.rs  lib.rs  ttl.rs  urukul.rs
artiq/firmware/libproto_artiq/: analyzer_proto.rs  drtioaux_proto.rs  kernel_proto.rs  lib.rs  mgmt_proto.rs  moninj_proto.rs  rpc_proto.rs  session_proto.rs
artiq/firmware/librpc_data/: Cargo.toml
artiq/firmware/librpc_data/src/: lib.rs
artiq/firmware/libsinara_config/: Cargo.toml
artiq/firmware/libsinara_config/src/: edge_counter.rs  i2c.rs  lib.rs  phaser.rs  urukul.rs
artiq/firmware/libsinara_config/src/phaser/: config.rs  dac34h84.rs  mod.rs  registers.rs  spi_config.rs  status.rs
artiq/firmware/libsinara_config/src/urukul/: config.rs  mod.rs  status.rs
artiq/firmware/runtime/: session.rs
artiq/frontend/: artiq_sinara_tester.py
artiq/gateware/targets/: kasli.py
systems/: dummy.json
