[package]
name = "ddb_parser"
description = "ARTIQ device_db parser."
authors = ["Alpine Quantum Technologies GmbH <info@aqt.eu>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "2"
pyo3 = { version = "0.20", features = ["auto-initialize"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
