[package]
name = "ddb_parser"
description = "ARTIQ device_db parser."
authors = ["Alpine Quantum Technologies GmbH <info@aqt.eu>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
sinara_config = { path = "../libsinara_config" }
indoc = "2"
num_enum = { version = "0.7.2", default-features = false }
pyo3 = { version = "0.20", features = ["auto-initialize"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
thiserror = "1"
