[package]
authors = ["M-Labs"]
name = "ksupport"
version = "0.0.0"
build = "build.rs"

[lib]
name = "ksupport"
path = "lib.rs"
crate-type = ["staticlib"]

[build-dependencies]
build_misoc = { path = "../libbuild_misoc" }
ddb_parser = { path = "../ddb_parser" }
itertools = "0.12"
prettyplease = "0.2.16"
proc-macro2 = "=1.0.86"  # must match a patched version working with rustc-1.57-nightly
quote = "1"
regex = "1"
syn = "2"

[dependencies]
cslice = { version = "0.3" }
eh = { path = "../libeh" }
io = { path = "../libio", features = ["byteorder"] }
dyld = { path = "../libdyld" }
board_misoc = { path = "../libboard_misoc" }
board_artiq = { path = "../libboard_artiq" }
proto_artiq = { path = "../libproto_artiq" }
riscv = { version = "0.6.0", features = ["inline-asm"] }
libc = { path = "../libc" }
unwind = { path = "../libunwind" }
num_enum = { version = "0.7.2", default-features = false }
bitflags = "2.4"
