[package]
authors = ["M-Labs"]
name = "ksupport"
version = "0.0.0"
build = "build.rs"

[lib]
name = "ksupport"
path = "lib.rs"
crate-type = ["staticlib"]

[build-dependencies]
build_misoc = { path = "../libbuild_misoc" }
build_ksupport = { path = "../libbuild_ksupport" }

[dependencies]
cslice = { version = "0.3" }
eh = { path = "../libeh" }
io = { path = "../libio", features = ["byteorder"] }
dyld = { path = "../libdyld" }
board_misoc = { path = "../libboard_misoc" }
board_artiq = { path = "../libboard_artiq" }
proto_artiq = { path = "../libproto_artiq" }
riscv = { version = "0.6.0", features = ["inline-asm"] }
libc = { path = "../libc" }
unwind = { path = "../libunwind" }
num_enum = { version = "0.7.2", default-features = false }
bitflags = "2.4"
sinara_config = { path = "../libsinara_config" }
